--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sea horse Sentinel</title>
+    <title>Sentinel Sea horse</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
@@ -32,9 +32,11 @@
     <img id="layer2" src="assets/layer2.png">
     <img id="layer3" src="assets/layer3.png">
     <img id="layer4" src="assets/layer4.png">
-
-    <button id="replay" class="game-button">Play again</button>
-
+    
+    <!-- replay -->
+    <div class="containerReplay">
+        <button id="replay" class="gameButton">Play again</button>
+    </div>   
 
     <script src="script.js"></script>
 </body>
