--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dist/style.min.css">
 </head>
 <body>
     <canvas id="canvas1"></canvas>
@@ -38,6 +38,6 @@
         <button id="replay" class="gameButton">Play again</button>
     </div>   
 
-    <script src="script.js"></script>
+    <script src="dist/script.min.js"></script>
 </body>
 </html>
